public/style.css
body {
  overflow-x: hidden;
}

/* --------------------------NAV SECTION & CAROUSEL---------------------------- */
#navSection {
  width: 100%;
  /* background-color: lightcyan; */
}

@media (min-width: 768px) {
  #navSection {
    width: 100%;
    /* height: 100vh; */
  }
}

.navbar-brand {
  font-family:Montserrat, sans-serif;
  font-weight:600;
  font-size: 28px;
}

/* #carouselcontainer {
  width: 100%; 
  max-height: 450px; 
} */

@media (min-width: 768px) {
  #carouselcontainer {
    width: 100%; 
    max-height: 600px;
    height: 450px;
  }
}

/* @media only screen and (max-width: 300px) {
  #carouselcontainer {
    width: 100%; 
    max-height: 200px;  
    background-color: red;
  }
} */

@media only screen 
  and (min-width: 320px) 
  and (max-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
    #carouselcontainer {
      width: 100%; 
      max-height: 200px;
    }
}

@media (min-width: 768px) {
  .carousel-inner {
    max-width: 100%;
    height: 450px;
  }
}
/* @media only screen and(max-width: 300px) {
  .carousel-inner {
    max-width: 100%;
    max-height: 100%;
    height: 200px;
  }
} */

.fa-shopping-cart {
  color: #F30007;
  border-bottom: 2px solid #F30007;
  font-size: 1.8em;
}

@media only screen 
  and (min-width: 320px) 
  and (max-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
    .carousel-inner {
      max-width: 100%;
      max-height: 100%;
      height: 200px;
    }
}
.carousel-indicators {
  align-self: baseline
}
/* .carousel-inner {
  height: 400px;
} */

.brand-logo {
  width: 200px;
  height: 50px;
  background-image: url("./Assets/milk-maid_logo.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  border: 1px solid #FFF;
  border-radius: 30px;
}

.brand-logo:hover {
  opacity: 0.5;
}

/* ------------------------------------MAIN-CONTENT SECTION------------------------------ */

#main-content-area {
  width: 100%;
}

#milk {
  background-image: url("./Assets/milk.jpg");
}

#curd {
  background-image: url("./Assets/curd.jpg");
}

#butter {
  background-image: url("./Assets/butter.png");
}

#paneer {
  background-image: url("./Assets/paneer.jpg");
}

#masterPane div {
  margin-bottom: 10px;
  border: 2px solid #ccc;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  opacity: 0.4;
  height: 100px;
  width: 100%;
  text-align: center;
  line-height: 6.5rem;
  font-size: 22px;
  font-weight: bold;
  text-transform: uppercase;
  text-shadow: 2px 2px #bbb;
}

#masterPane {
  /* display: inline-block; */
  /* flex-direction: column; */
  margin-left:21%;
  margin-top: 20px;
  margin-right: 0px;
  width: 200px;
  /* float: left; */
  padding-left: 5.5%;
}

.master-container {
  width: 100%;
  align-content: center;
  align-items: center;

}

#masterPane div:hover {
  cursor: pointer;
}

#main-content-area {
  /* justify-content: flex-start; */
}

/* ---------------------------------DETAIL-PANE------------------------------ */
.detail-pane {
  border: 1px solid #ccc;
  width: 100%;
  margin-top: 2%;
}

.detail-container {
  margin-left: 5%;
}

/* #detailPane {
  height: 450px;
  width: 900px;
  margin-left: 50px;
  margin-top: 20px;
  border-left: 1px solid #999;
  display: inline-block;
  float: left;
} */


/* ---------------------------------LOADING-INDICATOR------------------------------ */

.loading-indicator {
  background: #333;
  background: radial-gradient(#333, #000);
}

.loading-indicator-content {
  height: 110px;
}

.blob {
  width: 2rem;
  height: 2rem;
  background: rgba(230,230,230,0.85);
  border-radius: 50%;
  position: absolute;
  left: 50%;
  top: 11.5%;
  box-shadow: 0 0 1rem rgba(255, 255, 255, 0.25);
}

.blob-2 { animation: animate-to-2 1.5s infinite; }
.blob-3 { animation: animate-to-3 1.5s infinite; }
.blob-1 { animation: animate-to-1 1.5s infinite; }
.blob-4 { animation: animate-to-4 1.5s infinite; }
.blob-0 { animation: animate-to-0 1.5s infinite; }
.blob-5 { animation: animate-to-5 1.5s infinite; }

@keyframes animate-to-2 {
  25%, 75% { transform: translateX(-1.5rem) scale(0.75); }
  95% { transform: translateX(0rem) scale(1); }
}

@keyframes animate-to-3 {
  25%, 75% { transform: translateX(1.5rem) scale(0.75); }
  95% { transform: translateX(0rem) scale(1); }
}

@keyframes animate-to-1 {
  25% { transform: translateX(-1.5rem) scale(0.75); }
  50%, 75% { transform: translateX(-4.5rem) scale(0.6); }
  95% { transform: translateX(0rem) scale(1); }
}

@keyframes animate-to-4 {
  25% { transform: translateX(1.5rem) scale(0.75); }
  50%, 75% { transform: translateX(4.5rem) scale(0.6); }
  95% { transform: translateX(0rem) scale(1); }
}

@keyframes animate-to-0 {
  25% { transform: translateX(-1.5rem) scale(0.75); }
  50% { transform: translateX(-4.5rem) scale(0.6); }
  75% { transform: translateX(-7.5rem) scale(0.5); }
  95% { transform: translateX(0rem) scale(1); }
}

@keyframes animate-to-5 {
  25% { transform: translateX(1.5rem) scale(0.75); }
  50% { transform: translateX(4.5rem) scale(0.6); }
  75% { transform: translateX(7.5rem) scale(0.5); }
  95% { transform: translateX(0rem) scale(1); }
}

/* ---------------------------------Content-Cards------------------------------ */

.card-deck {
  width: 100%;
  align-items: center;
  margin-left: 0px;
  justify-content: center;
}

.card-img-top {
  height: 200px;
}

.card-body {
  height: 120px;
  /* padding-top: 20px;
  margin-bottom: 30px; */
}

.price {
  font-size: 22px;
  color: crimson;
  font-weight: bold;
}

.fa-plus, .fa-minus, .card-cart {
  color: crimson;
  /* font-weight: bold; */
}

.fa-plus:hover, .fa-minus:hover, .card-cart:hover {
  cursor: pointer;
  font-size: 18px;
  /* font-weight: bold; */
}

.card-cart:hover {
  background-color: crimson;
  color: white;
}

.card-quantity {
  padding-left: 4px;
  padding-right: 4px;
  font-size: 19px;
  font-weight: bold;
}

.card-quant-col {
  border-right: 2px solid rgb(220, 20, 60, 0.4);
}

.card {
  max-width: 300px;
}

